inflex-client/lexer.peg
// https://pegjs.org/online

Tokens = Token*

Token = Plain / Cell / String / Uuid / Prim / PlainAt

Uuid = "@uuid:" uuid:UuidGroups { return { text: uuid.join(""), location: location(), tag: "uuid" } }

Cell = "@cell:uuid:" uuid:UuidGroups { return { text: uuid.join(""), location: location(), tag: "uuid" } }

Prim = "@prim:" prim:([a-z0-9_]+) { return { text: prim.join(""), location: location(), tag: "prim" } }

PlainAt = "@" Plain { return { text: text(), location: location(), tag: "plain" } }

Plain = ([^"@]+) { return { text: text(), location: location(), tag: "plain" } }
String = "\"" [^\n"]+ "\"" { return { text: text(), location: location(), tag: "string" } }

UuidGroups =
  HexChar HexChar HexChar HexChar HexChar HexChar HexChar HexChar
  "-"
  HexChar HexChar HexChar HexChar
  "-"
  HexChar HexChar HexChar HexChar
  "-"
  HexChar HexChar HexChar HexChar
  "-"
  HexChar HexChar HexChar HexChar HexChar HexChar HexChar HexChar HexChar HexChar HexChar HexChar

HexChar = [0-9a-f]
